# img_compressor

./: CMakeLists.txt  README.md  package.xml
config/: compression_params.yaml  disparity_params_x2.yaml
documentation/: ImShrinker.txt
launch/: bagfile.launch  calibrator.launch  cirtesu_compressor.launch  cirtesu_joiner.launch  compressor.launch  error.launch  joiner.launch  preprocess_Cabrera_07032023_172650.launch  stereo_3D.launch
msg/: BinarySplit.msg
scripts/: help.txt  image_talker.py  img_calibrator.py  img_compressor_node.py  img_compressor_node_v2.py  img_error.py  img_joiner_node.py  img_joiner_node_v2.py  imshrinker  log.txt  pub_img.py  testbench_1.txt  testbench_bagile0.txt  testbench_parameters.py  testbench_pool.txt
scripts/imatges_utilitzades/: img0_bagfile.pgm  img_pool.pgm
