<?xml version="1.0"?>
<package format="2">
  <name>img_compressor_v2</name>
  <version>2.0.0</version>
  <description>The img_compressor_v2 package</description>
  <author email="agustimut98@gmail.com">Agustí Mut Cortón</author>
  <maintainer email="agustimut98@gmail.com">Agustí Mut Cortón</maintainer>
  <maintainer email="bo-miquel.nordfeldt@uib.es">Bo Miquel Nordfeldt Fiol</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
